restore official FloatingLines source + fix container height collapse

--- a/components/FloatingLines.css
+++ b/components/FloatingLines.css
@@ -1,7 +1,6 @@
 .floating-lines-container {
-  position: absolute;
-  inset: 0;
   width: 100%;
   height: 100%;
+  position: relative;
   overflow: hidden;
 }
